Added failing test

--- a/Refactoring.FraudDetection.Tests/Refactoring.FraudDetection.Tests.csproj
+++ b/Refactoring.FraudDetection.Tests/Refactoring.FraudDetection.Tests.csproj
@@ -66,6 +66,9 @@
     <Content Include="Files\FourLines_MoreThanOneFraudulent.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Files\TwoLinesEmailContainsPlusAndDot_FraudulentSecond.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Files\TwoLines_FraudulentSecond.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
